name:                owm
version:             0.1
description:         Get your current weather data by city and coordinates
homepage:            https://github.com/iokasimov/owm
license:             BSD3
license-file:        LICENSE
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2018 Murat Kasimov
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/owm.git

library
  exposed-modules:     Data.Weather.Information, Data.Weather.By.City, Data.Weather.By.Coordinates
  build-depends:       base == 4.*, text, servant, servant-client, aeson, optparse-applicative, http-client, http-client-tls
  default-extensions:  OverloadedStrings, DataKinds, TypeOperators
  default-language:    Haskell2010

executable weather
  main-is:             Main.hs
  build-depends:       base == 4.*, text, servant, servant-client, aeson, optparse-applicative, http-client, http-client-tls
  other-modules:       Data.Weather.Information, Data.Weather.By.City, Data.Weather.By.Coordinates
  default-extensions:  OverloadedStrings, DataKinds, TypeOperators
  default-language:    Haskell2010
